# gigahaha

./: Pasted-AI-Powered-virtual-customer-Support-Assistant-for-a-telecom-company-Objective-Participants-are-task-1727589088839.txt  README.md  app.py  chat.js  index.html  main.py  models.py  nlu_processor.py  pyproject.toml  replit.nix  requirements.txt  responses.json  routes.py  sentiment_analyzer.py  style.css  troubleshooter.py  utils.py
static/css/: style.css
static/js/: chat.js
templates/: index.html  login.html
