[tool.poetry]
name = "repl-nix-starnetchatbot"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
psycopg2-binary = "^2.9.9"
email-validator = "^2.2.0"
flask = "2.2.5"
flask-sqlalchemy = "3.0.3"
flask-login = "0.6.2"
flask-wtf = "1.1.1"
spacy = {extras = ["en_core_web_sm"], version = "^3.7.6"}
textblob = "0.15.3"
flask-bcrypt = "1.0.1"
werkzeug = "2.2.3"
groq = "^0.11.0"
speechrecognition = "^3.10.4"
pydub = "^0.25.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
